Updated form submission to using Fetch, added loading icon and error message

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -619,6 +619,19 @@ body {
 	resize: none;
 }
 
+.message .message-form-loading {
+	display: none;
+}
+
+.message .message-form-submitted {
+	display: none;
+}
+
+.message .message-error {
+	display: none;
+	color: var(--color-primary);
+}
+
 .messageImage {
 	height: 90%;
 	width: 90%;
