--- a/public/css/style.css
+++ b/public/css/style.css
@@ -239,7 +239,7 @@ body {
 	padding: 300px 0;
 	display: flex;
 	/* background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('../assets/ProfilePicture2.jpeg'); */
-	background: url("../assets/ProfilePicture.jpg"), #656C74;
+	background: url("../assets/ProfilePicture.png"), #656C74;
 	background-position: 90% 10%;
 	/* background-size: 40%; */
 	background-size: 900px 1100px;	
